--- a/frontend-react/src/index.css
+++ b/frontend-react/src/index.css
@@ -3,6 +3,6 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgb(255, 255, 255);
+  background-color: #101828;
 }
